# DYAD

./: .env.example  .gitignore  CARECIRCLE_DEMO_SPEC.md  CARECIRCLE_FEATURE_STATUS.md  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.loki.yml  docker-compose.nginx.yml  docker-compose.yml  implementation.md  package-lock.json  package.json  prometheus.yml  tsconfig.json
GToM/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATIONS.md  OPERATIONS.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  stryker.conf.json  tsconfig.json  typedoc.json
absolute-docs/: Dyad_DDD.md  backup-device-setup.md  demo-checklist.md  demo-rehearsal-log.md  pre-release-checklist.md  tech-stack.md
apps/mac/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/mac/src-tauri/icons/: build-icons.sh  generate-placeholder-pngs.mjs
apps/mac/src-tauri/sidecar/: engine-server.ts
apps/mac/src-tauri/src/: lib.rs  main.rs
corpora/: README.md
docs/: API.md  ARCHITECTURE.md  BUILD-ORDER.md  DATA-PRIVACY.md  DEPLOYMENT.md  EXAMPLES.md  RELEASING.md  RESEARCH-CITATIONS.md  SECURITY.md  TROUBLESHOOTING.md
gagent/: .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MIGRATIONS.md  OPERATIONS.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  install  jest.config.js  package-lock.json  package.json  typedoc.json
gbrain/: .env.example  README.md  docker-compose.yml  jest.config.js  package.json  (+3 more)
(+1546 files in other folders)
